[package]
name = "generate-random-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
fastrand = "1.4.1"
anyhow = { version = "1.0.57", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.9.0"
ctrlc = "3.2.2"
crossbeam = "0.8.1"